fix(*) restructure the whole project to align well with typescript

--- a/public/_lib/generalStyles.css
+++ b/public/_lib/generalStyles.css
@@ -3,6 +3,7 @@
 }
 
 body{
+    background-attachment: fixed;
     background-image: url("./wallhaven-ymp23d.png");
     background-size: cover;
     color: rgb(255, 255, 255);
